# QR_keychain

./: README.md  main.py  pyproject.toml
qr_keychain/: __main__.py  main.py
