[tool.poetry]
name = "qr-keychain"
version = "0.1.0"
description = ""
authors = ["Chris Busillo <info@shinycomputers.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
qrcode = {extras = ["pil"], version = "^7.4.2"}
numpy = "^1.26.4"
trimesh = "^4.3.2"
scikit-image = "^0.23.2"
solidpython = "^1.1.3"
solidpython2 = "^2.1.0"
numpy-stl = "^3.1.1"
meshio = "^5.3.5"
pip = "^24.0"
lib3mf = "^2.3.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
