[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "qr-keychain"
version = "0.1.0"
description = ""
authors = ["Chris Busillo <info@shinycomputers.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
qrcode = { extras = ["pil"], version = "^7.4.2" }
solidpython2 = "^2.1.0"

[tool.poetry.scripts]
qr-keychain = "qr_keychain.main:generate_plate"